<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="163dp"
        android:layout_height="163dp"
        android:layout_marginTop="54dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:background="@drawable/btn_add_background"
            android:contentDescription="add"
            android:src="@drawable/ic_add" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/folow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/count_of_followers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:text="1k"
                android:textColor="@color/main_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/followers"
                android:textColor="@color/main_text"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="204dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/count_of_following"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:text="342"
                android:textColor="@color/main_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/following"
                android:textColor="@color/main_text"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/folow">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="Name "
            android:textColor="@color/main_text"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="Last name"
            android:textColor="@color/main_text"
            android:textSize="17sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/dark_gray_blue"
        android:textSize="13sp"
        android:text="@string/profile_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:backgroundTint="@color/blue"
        android:foregroundGravity="center_horizontal"
        android:text="@string/ed_profile"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc"
        android:textSize="13sp"
        android:fontFamily="@font/poppins_semi_bold"/>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="61dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/main_text"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="214dp"
                android:text="@string/music"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/main_text"
                android:textSize="13sp"/>
        </TableRow>

    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>